<resources>
    <string name="app_name">KidsPuzzle</string>
    <string name="congratulation">Well done, </string>
    <string name="your_time_text">Time spent: </string>
    <string name="best_time_text">Your best time so far:  </string>
    <string name="textview">TextView</string>
    <string name="next_btn">NEXT</string>
    <string name="exit_btn">EXIT</string>
    <string name="time_us_up">\nTIME IS UP!\nTRY AGAIN!\n\n\nPush to continue\n</string>
    <string name="create_user">Create / Delete user</string>
    <string name="new_username">Enter new username</string>
    <string name="repeat_username">Repeat username</string>
    <string name="save_username">Save Username</string>
    <string name="existing_names">Already existing usernames:</string>
    <string name="delete_name">Delete Username</string>
    <string name="choose_level">Choose the number of puzzle pieces: </string>
    <string name="choose_name">Choose your username</string>








</resources>